src/parser/test/esprima/invalid-syntax/strict_assignment_yield.js
function hello() { "use strict"; yield = 1; }
